--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,12 @@
   flex-basis: 100%;
 }
 
+.flex-row-condensed {
+  display: flex;
+  flex-direction: row;
+  width: 7rem;
+}
+
 .centered {
   justify-content: center;
   align-items: center;
@@ -50,9 +56,19 @@
   padding: 0.1rem 0rem;
 }
 
+.med-padding {
+  padding: 0.5rem;
+}
+
+.xlg-padding-left {
+  padding-left: 2rem;
+}
+
 .flex-row-centered {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .no-padding-left-right {
