--- a/src/App.css
+++ b/src/App.css
@@ -98,3 +98,40 @@
   cursor: pointer;
   border-radius: 0.5rem;
 }
+
+.flex-left-bold {
+  display: flex;
+  justify-content: left;
+  font-weight: bold;
+  margin-bottom: 0rem;
+  white-space: nowrap;
+}
+
+.wrap {
+  flex-wrap: wrap
+}
+
+.title {
+  font-size: large;
+  font-weight: bold;
+  text-decoration: underline;
+  align-self: flex-start;
+}
+
+.margin-bottom {
+  margin-bottom: 1rem;
+}
+
+.sm-border-radius {
+  border-radius: 0.5rem;
+}
+
+.xlg-padding {
+  padding: 2rem;
+}
+
+.bold-red-text {
+  font-weight: bold;
+  color: red;
+  font-style: italic;
+}
